--- a/src/app/_popupKomponente/budget/budget.component.html
+++ b/src/app/_popupKomponente/budget/budget.component.html
@@ -8,11 +8,27 @@
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="budgetContent">
+            <div class="list">
+                <p>Budget gemäss Positionenliste:</p>
+                <input type="text" value="CHF 3'500.15.-">
+            </div>
+            <div class="list">
+                <p>Kosten gemäss Stunden Mitarbeiter:</p>
+                <input type="text" value="CHF 2'010.00.-">
+            </div>
+            <div class="list">
+                <p>Kosten in Regie gemäss Meilensteine:</p>
+                <input type="text" value="CHF 150.00.-">
+            </div>
+            <div class="list">
+                <p>Ertrag:</p>
+                <input type="text" value="CHF 1'320.00.-">
+            </div>
+            <div class="list">
+                <p>Marge:</p>
+                <input type="text" value="40%">
+            </div>
         </div>
     </div>
     <div class="popupFooter">
