--- a/src/app/_popupKomponente/meilenstein/meilenstein.component.html
+++ b/src/app/_popupKomponente/meilenstein/meilenstein.component.html
@@ -23,6 +23,19 @@
                     <option value="Entfernt">Entfernt</option>
                 </select>
             </div>
+            <p>Abrechnung:</p>
+            <form action="" class="radioForm">
+                <div>
+                    <label for="radioNichtRegie">Nicht Regiearbeit</label>
+                    <input type="radio" id="radioNichtRegie" name="regie" value="Nicht Regiearbeit" checked required>
+                    <span class="radio"></span>
+                </div>
+                <div>
+                    <label for="radioRegie">Regiearbeit</label>
+                    <input type="radio" id="radioRegie" name="regie" value="Regiearbeit" required>
+                    <span class="radio"></span>
+                </div>
+            </form>
         </div>
         <div class="split secondSplit">
             <p>Notizen:</p>
