--- a/src/app/_popupKomponente/umwandeln/umwandeln.component.html
+++ b/src/app/_popupKomponente/umwandeln/umwandeln.component.html
@@ -9,6 +9,20 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Bitte Option auswählen:</p>
+            <form action="" class="radioForm">
+                <div>
+                    <label for="radioKopieren">Vorgang in neues Angebot kopieren</label>
+                    <input type="radio" id="radioKopieren" name="umwandeln" value="kopieren" checked required>
+                    <span class="radio"></span>
+                </div>
+                <div>
+                    <label for="ragioInAuftrag">Vorgang in Auftrag kopieren</label>
+                    <input type="radio" id="ragioInAuftrag" name="umwandeln" value="inAuftrag" required>
+                    <span class="radio"></span>
+                </div>
+            </form>
+
         </div>
         <div class="split secondSplit">
         </div>
