--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -37,11 +37,11 @@
     text-align: center
 
 /* Kosten und Stunden */
-.stunden button
+.btnBearbeiten button
     top: calc(calc(  $zweiTeiligeHoeheUnten / 2 ) + 10px)
     right: 10px
 
-.btnErfassen
+.stunden button
     right: 10px !important
 
 .kostenContent,
@@ -49,7 +49,6 @@
     margin-top: 10px
     margin-left: 10px
     margin-right: 5px
-    height: calc(calc($zweiTeiligeHoeheUnten - 100px) /2)
 
 .kostenBalken, 
 .kostenBeschrieb,
