--- a/src/app/_popupKomponente/budget/budget.component.sass
+++ b/src/app/_popupKomponente/budget/budget.component.sass
@@ -1,2 +1,12 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.budgetContent
+    margin-left: 40px
+
+.list
+    display: flex
+
+.list p,
+.list input
+    width: 400px
