--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -36,6 +36,21 @@
 .dropDown select
     text-align: center
 
+.row 
+    width: 103%
+
+.row p:nth-child(1)
+    width: 30%
+
+.row p:nth-child(2)
+    width: 65%
+    background-color: $tableColor
+    border: 1px solid transparent
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
 /* Kosten und Stunden */
 .btnBearbeiten button
     top: calc(calc(  $zweiTeiligeHoeheUnten / 2 ) + 10px)
