--- a/src/app/_popupKomponente/kalkulation/kalkulation.component.html
+++ b/src/app/_popupKomponente/kalkulation/kalkulation.component.html
@@ -113,40 +113,40 @@
                 <input type="text" readonly class="contentReadonly" value="001 - Landingpage">
             </div>
             <div class="row">
-                <p>Einstandspreis:</p>
+                <p>EP Brutto CHF:</p>
                 <input type="text" value="98.00">
             </div>
             <div class="row">
-                <p>Rabatt 1:</p>
-                <input type="text" value="15%">
+                <p>Rabatt 1 %:</p>
+                <input type="text" value="15">
             </div>
             <div class="row">
-                <p>Rabatt 2:</p>
-                <input type="text" value="5%">
+                <p>Rabatt 2 %:</p>
+                <input type="text" value="5">
             </div>
             <div class="row">
-                <p>EP Effektiv:</p>
-                <input type="text" readonly class="contentReadonly" value="79.135.-">
+                <p>EP Netto CHF:</p>
+                <input type="text" readonly class="contentReadonly" value="79.135">
             </div>
             <div class="row">
-                <p>Verkaufspreis:</p>
-                <input type="text" value="97.45.-">
+                <p>VP Brutto CHF:</p>
+                <input type="text" value="97.45">
             </div>
             <div class="row">
-                <p>Kundenrabatt:</p>
-                <input type="text" value="5%">
+                <p>Kundenrabatt %:</p>
+                <input type="text" value="5">
             </div>
             <div class="row">
-                <p>Spezialrabatt:</p>
-                <input type="text" value="2%">
+                <p>Spezialrabatt %:</p>
+                <input type="text" value="2">
             </div>
             <div class="row">
-                <p>Marge:</p>
-                <input type="text" value="15%">
+                <p>Marge %:</p>
+                <input type="text" value="15">
             </div>
             <div class="row">
-                <p>VP effektiv:</p>
-                <input type="text" readonly class="contentReadonly" value="91.00.-">
+                <p>VP Netto CHF:</p>
+                <input type="text" readonly class="contentReadonly" value="91.00">
             </div>
             <div class="btnBearbeiten">
                 <p>Position speichern</p>
