--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -18,7 +18,9 @@
                 Friedaustrasse 3<br />9608 Ganterschwil<br />CH - Schweiz
             </p>
             <p>Neue Adresse:</p>
-            <textarea name="neueAdresse" id="neueAdresse" cols="30" rows="3"></textarea>
+            <input type="text" placeholder="Adresse">
+            <input type="text" placeholder="Ortschaft">
+            <input type="text" placeholder="Land">
             <div class="btnBearbeiten">
                 <p>Neue Adresse speichern</p>
             </div>
