--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
@@ -41,3 +41,18 @@
 .positionTable td
     width: 100%
 
+.row 
+    width: 103%
+
+.row p:nth-child(1)
+    width: 30%
+
+.row p:nth-child(2)
+    width: 65%
+    background-color: $tableColor
+    border: 1px solid transparent
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
