--- a/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.sass
+++ b/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.sass
@@ -19,18 +19,6 @@
 .thirdSplit
     margin-left: 10px
 
-.firstSplit p:nth-child(1)
-    width: 30%
-
-.firstSplit p:nth-child(2)
-    width: 65%
-    background-color: $tableColor
-    border: 1px solid transparent
-    border-radius: 5px
-    margin-top: 5px
-    margin-bottom: 5px
-    padding-left: 5px
-
 .windowTable
     width: 100% !important
 
@@ -45,6 +33,9 @@
     text-align: left
     width: 68.5%
 
+.row 
+    width: 103%
+
 .row input
     width: 65%
     border: 1px solid $borderColor
@@ -56,4 +47,33 @@
         outline: none
 
 
-    
+.firstSplit p:nth-child(1)
+    width: 30%
+
+.firstSplit p:nth-child(2)
+    width: 65%
+    background-color: $tableColor
+    border: 1px solid transparent
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
+.contentReadonly
+    background-color: $tableColor !important
+    border-color: 1px solid transparent !important
+
+.thirdSplit p
+    width: 65%
+
+.thirdSplit input
+    width: 20%
+    border: 1px solid $borderColor
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
+.btnBearbeiten p
+    width: 100% !important
+
