--- a/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
+++ b/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
@@ -33,10 +33,8 @@
                     <option value="ei03">Anderes</option>
                 </select>
             </div>
-            <p>Einzelpreis in CHF:</p>
-            <input type="number" value="150.00">
             <div class="artikelKonditionen">
-                <p>Belegart auswählen:</p>
+                <p>Artikel Konditionen:</p>
                 <form action="" class="radioForm">
                     <div>
                         <label for="radioNetto">Nettoartikel</label>
