--- a/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
+++ b/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
@@ -1,7 +1,7 @@
 <div class="popupWindow">
     <div class="popupHeader">
         <div class="headerBezeichnung">
-            <p>Projekt Kundendaten</p>
+            <p>Projekt Ansprechpartner</p>
         </div>
         <div class="closeTab">
             <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
@@ -22,7 +22,10 @@
             </div>
             <input type="text" placeholder="Vorname">
             <input type="text" placeholder="Nachname">
+            <input type="text" placeholder="Telefon">
+            <input type="text" placeholder="E-Mail">
             <input type="text" placeholder="Funktion">
+
             <div class="btnBearbeiten">
                 <p>Neuer Ansprechpartner speichern</p>
             </div>
