--- a/src/app/_popupKomponente/stunden/stunden.component.html
+++ b/src/app/_popupKomponente/stunden/stunden.component.html
@@ -26,8 +26,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -38,8 +38,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -50,8 +50,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -62,8 +62,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -74,8 +74,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -86,8 +86,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -98,8 +98,8 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
                 <div class="stunden splitStunden">
                     <input class="inputDate" type="date">
@@ -110,81 +110,10 @@
                         <option value="Meilenstein">Meilenstein</option>
                     </select>
                     <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
+                    <input class="inputTime" type="text" value="5">
+                    <input class="inputTime" type="text" value="40">
                 </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
-                <div class="stunden splitStunden">
-                    <input class="inputDate" type="date">
-                    <select class="inputSelect" name="meilenstein" id="meilenstein">
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                        <option value="Meilenstein">Meilenstein</option>
-                    </select>
-                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                    <input class="inputTime" type="text" value="5h">
-                    <input class="inputTime" type="text" value="40min">
-                </div>
+
 
             </div>
             <div class="stundenHinzufuegen splitStunden">
