--- a/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
+++ b/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
@@ -30,8 +30,9 @@
                 <p>Unternehmen</p>
             </a>
         </div>
-        <div class="abstand menuPunkt">
-        </div>
+        <div class="abstand menuPunkt"></div>
+        <div class="abstand2 menuPunkt"></div>
+        <div class="abstand3 menuPunkt"></div>
         <div class="einstellungenNav menuPunkt">
             <a routerLink="/einstellungen" routerLinkActive="active">
                 <img [src]="einstellungen" alt="">
