--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -193,9 +193,9 @@ input
 
 /* Popup Window Searchbar */
 .searchBarSmallPopup
-    position: absolute
-    right: calc(calc( 100vw - 894px + 20px) /2)
-    top: calc( calc( 100vh - 900px) /2)
+    position: relative
+    right: -300px
+    top: -28px
     width: calc(360px - 30px)
     height: 25px
     background-color: white
