--- a/src/styles.sass
+++ b/src/styles.sass
@@ -46,6 +46,13 @@ body
     .bodyFehlermeldung
         display: flex
 
+@media only screen and (max-height: 600px)
+    .appRoot
+        display: none
+    .bodyFehlermeldung
+        display: flex
+
+
 h1
     font-family: $fontSegoe
     font-weight: bold
